Refactor and fix null pointer in question 9